# spacetimedb-libs

./: LICENSE  README.md  stdb-libs.code-workspace
.github/: copilot-instructions.md
server/: .gitignore  Cargo.toml
server/bins/stdb-backend-server/: Cargo.toml
server/libs/stdb-common/: Cargo.toml  README.md
server/libs/stdb-common/src/: dice.rs  duration.rs  error.rs  lib.rs  uuid.rs  validate.rs
server/libs/stdb-http/: Cargo.toml  README.md
server/libs/stdb-http/src/: lib.rs
server/libs/stdb-inventory/: Cargo.toml  README.md
server/libs/stdb-inventory/src/: lib.rs
server/libs/stdb-match/: Cargo.toml  README.md
server/libs/stdb-match/src/: lib.rs
server/libs/stdb-player/: Cargo.toml  README.md
server/libs/stdb-player/src/: error.rs  lib.rs  player.rs  validate.rs
server/libs/stdb-player/src/player/: mod.rs  repository.rs
server/libs/stdb-player/src/vip/: mod.rs  repository.rs
