[workspace]
resolver = "2"
members = [
    "bins/*",
    "libs/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/rafaelGuerreiro/spacetimedb-libs"
repository = "https://github.com/rafaelGuerreiro/spacetimedb-libs"
authors = ["Rafael Guerreiro"]
license = "MIT"
keywords = ["spacetimedb", "game"]
categories = ["game"]

[workspace.dependencies]
spacetimedb = { version = "^1.2", features = ["unstable"]}
log = "^0.4"
thiserror = "^2.0"
