[package]
name = "stdb-backend-server"
description = "A backend server deployed elsewhere that will connect to your SpaceTimeDB and perform admin operations."
readme = "README.md"
documentation = "https://github.com/rafaelGuerreiro/spacetimedb-libs/tree/main/server/libs/stdb-common"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = "^1.46"
